Basic connection Web-Api, Docker

--- a/SmartDepo/SmartDepo/Components/Pages/Weather.razor
+++ b/SmartDepo/SmartDepo/Components/Pages/Weather.razor
@@ -1,5 +1,6 @@
 ﻿@page "/weather"
-@attribute [StreamRendering]
+@rendermode InteractiveServer
+@inherits WeatherBase
 
 <PageTitle>Weather</PageTitle>
 
@@ -7,9 +8,11 @@
 
 <p>This component demonstrates showing data.</p>
 
-@if (forecasts == null)
+<button @onclick="FetchData">Fetch Data</button>
+
+@if (WeatherForecasts == null)
 {
-    <p><em>Loading...</em></p>
+    <p><em>Click the button...</em></p>
 }
 else
 {
@@ -23,7 +26,7 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var forecast in forecasts)
+            @foreach (var forecast in WeatherForecasts)
             {
                 <tr>
                     <td>@forecast.Date.ToShortDateString()</td>
@@ -37,28 +40,5 @@ else
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
 
-    protected override async Task OnInitializedAsync()
-    {
-        // Simulate asynchronous loading to demonstrate streaming rendering
-        await Task.Delay(500);
-
-        var startDate = DateOnly.FromDateTime(DateTime.Now);
-        var summaries = new[] { "Freezing", "Bracing", "Chilly", "Cool", "Mild", "Warm", "Balmy", "Hot", "Sweltering", "Scorching" };
-        forecasts = Enumerable.Range(1, 5).Select(index => new WeatherForecast
-        {
-            Date = startDate.AddDays(index),
-            TemperatureC = Random.Shared.Next(-20, 55),
-            Summary = summaries[Random.Shared.Next(summaries.Length)]
-        }).ToArray();
-    }
-
-    private class WeatherForecast
-    {
-        public DateOnly Date { get; set; }
-        public int TemperatureC { get; set; }
-        public string? Summary { get; set; }
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
-    }
 }
